# whatsapp-desktop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
