[package]
name = "whatsapp-desktop"
version = "1.1.0"
description = "A fast, lightweight WhatsApp Desktop wrapper built with Tauri"
authors = ["Contributors"]
license = "MIT"
repository = "https://github.com/aman71711/whatsapp-desktop"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
incremental = false
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true
